# state-scrapper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yaml
docs/: SRS.md  implementation_plan.md  task.md  walkthrough.md
src/: main.py  notifier.py  scraper.py  storage.py
tests/: test_notifier.py  test_scraper.py
