[project]
name = "nj-scraper"
version = "0.1.0"
description = "NJ State Job Scraper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pre-commit>=3.6.0",
    "ruff>=0.2.1",
]

[project.scripts]
dry-run = "src.main:dry_run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "D",  # pydocstyle
    "UP", # pyupgrade
]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
